--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1765,3 +1765,20 @@ padding:50px 0
     padding: 22px 0 14px;
     font-size: 18px;
 }
+
+.tabla {
+	border-collapse: collapse;
+	margin: 0 auto;
+
+  }
+  
+  .tabla td, .tabla th {
+	border: 1px solid black;
+	padding: 8px;
+  }
+  
+  .tabla th {
+	text-align: left;
+	background-color: #f2f2f2;
+  }
+  
