--- a/templates/listajuegos.html
+++ b/templates/listajuegos.html
@@ -5,29 +5,30 @@
 {%block contenido%}
 
 
-    <table class="tabla">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Desarrollador</th>
-                <th>Detalle</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            {% for juego in juegos %}
+<table class="tabla">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Detalle</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% if juegos %}
+          {% for juego in juegos %}
             <tr>
                 <td>{{ juego.id }}</td>
-                <td>{{ juego.nombre }}</td>
-                <td>{{ juego.desarrollador }}</td>
+                <td>{{ juego.name }}</td>
                 <td><a href="\juego\{{ juego.id }}">Detalle</a></td>
-
             </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
+          {% endfor %}
+        {% else %}
+          <tr>
+            <td colspan="4">No se encontraron juegos</td>
+          </tr>
+        {% endif %}
+    </tbody>
+  </table>
       
 
 </body>
