--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,8 @@
 					<div class="navbar-collapse offcanvas" id="navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li><a href="/">Inicio</a></li>
-							<li><a href="/juegos">Juegos</a></li>
-							<li><a href="/juegosV2">Juegos Dinamico</a></li>
+							<li><a href="/personajes">Personajes</a></li>
+							<li><a href="/personajesV2">Personajes Dinamico</a></li>
 
 							
 
