--- a/templates/detalle.html
+++ b/templates/detalle.html
@@ -4,8 +4,9 @@
 
 {% block contenido %}
   <div class="detalle-personaje">
-    <h2>{{ personaje.name }}</h2>
-    <img src="{{ personaje.thumbnail.path }}/standard_fantastic.{{ personaje.thumbnail.extension }}" alt="{{ personaje.name }}">
+    <!-- <h2>{{ personaje.name }}</h2> -->
+    <!-- <img src="{{ personaje.thumbnail.path }}/standard_fantastic.{{ personaje.thumbnail.extension }}" alt="{{ personaje.name }}"> -->
+    <img src="{{ imagen_personaje }}" alt="{{ personaje.name }}">
 
     <h3>Descripción</h3>
     <p>{{ personaje.description }}</p>
