--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {%block titulo%}{%endblock%}
 {%block contenido%}
 
-<a href="/juegos">
-	<img src="{{ url_for('static', filename='img/logo_msx.jpg') }}" alt="Pagina juegos">
+<a href="/personajes">
+	<img src="{{ url_for('static', filename='img/atlasico.jpg') }}" alt="Buscar personajes">
   </a>
 
 {%endblock%}
