Puerto Actualizado y listas dinamicas

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {%block contenido%}
 
 <a href="/personajes">
-	<img src="{{ url_for('static', filename='img/atlasico.jpg') }}" alt="Buscar personajes">
+	<img src="{{ url_for('static', filename='img/Marvel_Logo.png') }}" alt="Buscar personajes" style="max-width: 900px; max-height: 900px;">
   </a>
 
 {%endblock%}
