--- a/templates/personajes_V2.html
+++ b/templates/personajes_V2.html
@@ -4,9 +4,35 @@
 {% block titulo %}Juegos{% endblock %}
 {% block contenido %}
 <form method="post" action="{{ url_for('personajesV2') }}">
-  <input type="text" name="search_query" placeholder="Buscar juego..." value="{{ search_query }}" onchange="this.form.submit()">
+  <input type="text" name="buscar_personaje" placeholder="Buscar juego..." value="{{ search_query }}" onkeyup="actualizarFormulario(event)">
+  
+  <select name="año_filtro" onchange="actualizarFormulario(event)">
+    <option value="">Todos los años</option>
+    {% for año in años %}
+      <option value="{{ año }}" {% if año == año_filtro %}selected{% endif %}>{{ año }}</option>
+    {% endfor %}
+  </select>
+
   <button type="submit">Buscar</button>
+
 </form>
+
+{% for personaje in personajes %}
+  <!-- Mostrar información del personaje -->
+{% endfor %}
+
+<script>
+  function actualizarFormulario(event) {
+    var formulario = event.target.form;
+    formulario.submit();
+  }
+</script>
+
+
+
+
+
+
 
 
 <br>
